kubernetes/apps/longhorn-system/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-longhorn
  annotations:
    spec.ingressClassName: internal
    traefik.ingress.kubernetes.io/router.entrypoints: local-http
spec:
  rules:
  - host: longhorn.homelab.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: longhorn-frontend
            port:
              number: 80
