kubernetes/apps/longhorn-system/ingressRoute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: longhorn-ingressroute
  namespace: longhorn-system
spec:
  entryPoints:
    - private-http
  routes:
    - match: Host(`homelab.local`) && PathPrefix(`/`)
      kind: Rule
      services:
        - name: longhorn-frontend
          port: 80
